--- a/classes-ids.html
+++ b/classes-ids.html
@@ -31,7 +31,7 @@
 
 		<div>
 			<div id="cabecalho">
-				<img src="imagens/logo.png">
+				<img src="https://tse3.mm.bing.net/th?id=OIP.VaR28wM1_tFhNoY6eqoQfAHaE8&pid=Api&P=0">
 				<ul>
 					<li>Home</li>
 					<li>quem somos</li>
